[package]
name = "proposer-payment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive", "env"] }
csv = "1.3.0"
ethers = { version = "2.0.11", features = ["ipc"] }
eyre = "0.6.9"
futures = "0.3.29"
indicatif = "0.17.7"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
